--- a/UTeam-front/src/assets/templatemo-edu-meeting.css
+++ b/UTeam-front/src/assets/templatemo-edu-meeting.css
@@ -17,7 +17,7 @@ Table of contents
 06. features
 07. testimonials
 08. contact
-09. footer
+09. footerCall
 10. preloader
 11. search
 12. portfolio
